changed line 5 yml again 2

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/yco12mz50ka8/public_html/
-    - /bin/cp -R /home/yco12mz50ka8/repositories/bocastu/ $DEPLOYPATH
+    - /bin/cp -R ./ $DEPLOYPATH
